<resources>
    <string name="app_name">Travelapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hotel">Hotels</string>
    <string name="guide">Guides</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="signin">SIGN IN</string>
    <string name="next">Next</string>

    <string name="kandy">KANDY</string>
    <string name="anura">ANURADHAPURA</string>
    <string name="galle">GALLE</string>
    <string name="jafna">JAFFNA</string>
    <string name="rathna">RATHNAPURA</string>
    <string name="nuwara">NUWARAELIYA</string>

    <string name="guide_reservation">Guide Booking</string>
    <string name="guideName">Guide Name</string>

    <string-array name="guide_vehicle">
        <item>KDH</item>
        <item>Hiace</item>
        <item>Dolphin</item>
        <item>Laylend Bus</item>
        <item>Vanatte</item>
    </string-array>
</resources>
