<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GuideConfirmBooking"
    android:background="@drawable/gradient2">

    <TextView
        android:id="@+id/textView100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_person_pin_black_24dp"
        android:text=" Your Details"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="Name"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-20dp"
        android:text="Name of user" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="E-Mail"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-20dp"
        android:text="user@gmail.com" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Days"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-20dp"
        android:text="No of Days" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Vehicle"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-20dp"
        android:text="Vehicle Model" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Phone Number"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/textView110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="-20dp"
        android:text="(Optional)" />

    <Button
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_shape"
        android:onClick="@string/edit"
        android:text="@string/edit"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/delete112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="-48dp"
        android:background="@drawable/button_shape"
        android:onClick="@string/delete"
        android:text="@string/delete"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/confirm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:onClick="@string/confirm"
        android:text="confirm"
        android:textColor="@color/colorText"
        tools:text="@string/confirm" />

    <TextView android:id="@+id/text114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        />

</LinearLayout>